Add hover with answers to question container

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 </div>
             </section>
 
-            <section class="free-trial">
+            <section class="free-trial" id="faq-part">
                 <article id="trial" class="flex-container medium-width">
                     <div class="text-part"><h2>Porta Dropbox Business nella tua azienda.</h2></div>
                     <div class="button-part"><a href="#">Inizia la tua prova gratuita</a></div>
@@ -439,20 +439,38 @@
                     <h2>Domande frequenti</h2>
                     <div>
                         <hr>
-                        <div class="row-quest flex-container">
-                            <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
-                            <i class="fa-solid fa-angle-down"></i>
-                        </div>
+                        <a href="#faq-part" id="q">
+                            <div class="row-quest flex-container p-relative">
+                                    <p class="question">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                                    <i class="fa-solid fa-angle-down"></i>
+                                    <i class="fa-solid fa-angle-up"></i>
+                            </div>
+                            <div class="row-answer">
+                                <p class="answer">Dropbox offre tre piani per soddisfare le esigenze del tuo team. Il piano Standard offre al tuo team 5.000 GB di spazio di archiviazione condiviso. Per i team che hanno bisogno di più spazio, i piani Advanced ed Enterprise offrono tutto lo spazio necessario.</p>
+                            </div>
+                        </a>
                         <hr>
-                        <div class="row-quest flex-container">
-                            <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
-                            <i class="fa-solid fa-angle-down"></i>
-                        </div>
+                        <a href="#faq-part" id="q">
+                            <div class="row-quest flex-container p-relative">
+                                    <p class="question">Quanto spazio riceve il mio team?</p>
+                                    <i class="fa-solid fa-angle-down"></i>
+                                    <i class="fa-solid fa-angle-up"></i>
+                            </div>
+                            <div class="row-answer">
+                                <p class="answer">Dropbox offre tre piani unici per i team in base alle tue esigenze. Il piano Standard fornisce 5.000 GB di spazio di archiviazione condiviso. Per i team che hanno bisogno di più spazio, i nostri piani Advanced ed Enterprise offrono archiviazione illimitata.</p>
+                            </div>
+                        </a>
                         <hr>
-                        <div class="row-quest flex-container">
-                            <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
-                            <i class="fa-solid fa-angle-down"></i>
-                        </div>
+                        <a href="#faq-part" id="q">
+                            <div class="row-quest flex-container p-relative">
+                                    <p class="question">Sono previsti sconti per Dropbox Standard, Advanced o Enterprise?</p>
+                                    <i class="fa-solid fa-angle-down"></i>
+                                    <i class="fa-solid fa-angle-up"></i>
+                            </div>
+                            <div class="row-answer">
+                                <p class="answer">Sì. Sono previsti sconti in base al volume, nonché sconti per enti no profit e istituti formativi. Contatta il nostro team di vendita per ulteriori informazioni.</p>
+                            </div>
+                        </a>
                         <hr>
                     </div>
                 </article>
